--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
+    <script src="js/bootstrap.js"></script>
+
     <title>PC-Dev Site</title>
 </head>
 
 <body>
-    First tests
+    <nav class="navbar navbar-default navbar-doublerow navbar-trans navbar-fixed-top">
+        <nav class="navbar navbar-top hidden-xs">
+            <div class="container">
+                <ul class="nav navbar-nav pull-left">
+                    <li><a href="#"><span class="glyphicon glyphicon-thumbs-up text-white"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-globe text-white"></span></a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-pushpin text-white"></span></a></li>
+                    <li><a href="#"><span class="text-white">QUESTIONS? CALL: <b>+963000000000</b></span></a></li>
+                </ul>
+                <!-- right nav top -->
+                <ul class="nav navbar-nav pull-right">
+                    <li><a href="#" class="text-white">About Us</a></li>
+                    <li><a href="#" class="text-white">Contact Us</a></li>
+                </ul>
+            </div>
+
+        </nav>
+    </nav>
 </body>
 
 </html>
