reworked css and js files for navbar

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta http-equiv="Expires" content="0" />
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
 
     <script src="js/bootstrap.js"></script>
+    <script src="js/javas.js"></script>
 
     <title>PC-Dev Site</title>
 </head>
