--- a/index.html
+++ b/index.html
@@ -6,71 +6,76 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
 
-    <!-- link rel="stylesheet" type="text/css" href="css/bootstrap.css" / -->
-    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Snippet - Bootsnipp.com</title>
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="style/style.css" />
 
-    <!-- script src="js/bootstrap.js" ></script -->
-    <script src="js/javas.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+        <script src="js/javas.js"></script>
 
-    <title>PC-Dev Site</title>
-</head>
+        <title>PC-Dev Site</title>
+    </head>
 
-<body>
-    <nav class="navbar navbar-default navbar-doublerow navbar-trans navbar-fixed-top">
-        <!-- top nav -->
-        <nav class="navbar navbar-top hidden-xs">
-            <div class="container">
-                <!-- left nav top -->
-                <ul class="nav navbar-nav pull-left">
-                    <li><a href="#"><span class="glyphicon glyphicon-thumbs-up text-white"></span></a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-globe text-white"></span></a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-pushpin text-white"></span></a></li>
-                    <li><a href="#"><span class="text-white">QUESTIONS? CALL: <b>+963000000000</b></span></a></li>
-                </ul>
-                <!-- right nav top -->
-                <ul class="nav navbar-nav pull-right">
-                    <li><a href="#" class="text-white">About Us</a></li>
-                    <li><a href="#" class="text-white">Contact Us</a></li>
-                </ul>
-            </div>
-            <div class="dividline light-grey"></div>
-        </nav>
-        <!-- down nav -->
-        <nav class="navbar navbar-down">
-            <div class="container">
-                <div class="flex-container">
-                    <div class="navbar-header flex-item">
-                        <div class="navbar-brand" href="#">ALPHAD</div>
-                    </div>
-                    <ul class="nav navbar-nav flex-item hidden-xs">
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">TheTeam</a></li>
+    <body>
+        <nav class="navbar navbar-default navbar-doublerow navbar-trans navbar-fixed-top">
+            <!-- top nav -->
+            <nav class="navbar navbar-top hidden-xs">
+                <div class="container">
+                    <!-- left nav top -->
+                    <ul class="nav navbar-nav pull-left">
+                        <li><a href="#"><span class="glyphicon glyphicon-thumbs-up text-white"></span></a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-globe text-white"></span></a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-pushpin text-white"></span></a></li>
+                        <li><a href="#"><span class="text-white">QUESTIONS? CALL: <b>+963000000000</b></span></a></li>
                     </ul>
-                    <ul class="nav navbar-nav flex-item hidden-xs pull-right">
-                        <li><a href="#" class="">offer!</a></li>
+                    <!-- right nav top -->
+                    <ul class="nav navbar-nav pull-right">
+                        <li><a href="#" class="text-white">About Us</a></li>
+                        <li><a href="#" class="text-white">Contact Us</a></li>
                     </ul>
-                    <!-- dropdown only moblie -->
-                    <div class="dropdown visible-xs pull-right">
-                        <button class="btn btn-default dropdown-toggle " type="button" id="dropdownmenu" data-toggle="dropdown">
-              <span class="glyphicon glyphicon-align-justify"></span> 
-            </button>
-                        <ul class="dropdown-menu">
+                </div>
+                <div class="dividline light-grey"></div>
+            </nav>
+            <!-- down nav -->
+            <nav class="navbar navbar-down">
+                <div class="container">
+                    <div class="flex-container">
+                        <div class="navbar-header flex-item">
+                            <div class="navbar-brand" href="#">ALPHAD</div>
+                        </div>
+                        <ul class="nav navbar-nav flex-item hidden-xs">
                             <li><a href="#">Projects</a></li>
                             <li><a href="#">Pricing</a></li>
                             <li><a href="#">TheTeam</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">contact us</a></li>
                         </ul>
+                        <ul class="nav navbar-nav flex-item hidden-xs pull-right">
+                            <li><a href="#" class="">offer!</a></li>
+                        </ul>
+                        <!-- dropdown only moblie -->
+                        <div class="dropdown visible-xs pull-right">
+                            <button class="btn btn-default dropdown-toggle " type="button" id="dropdownmenu" data-toggle="dropdown">
+              <span class="glyphicon glyphicon-align-justify"></span> 
+            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Projects</a></li>
+                                <li><a href="#">Pricing</a></li>
+                                <li><a href="#">TheTeam</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">contact us</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </nav>
         </nav>
-    </nav>
-    <!--bg img  -->
-    <header>
-        <img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/J70T3LHQ2O.jpg" style="width:100%">
-    </header>
-</body>
+        <!--bg img  -->
+        <header>
+            <img src="https://d2lm6fxwu08ot6.cloudfront.net/img-thumbs/960w/J70T3LHQ2O.jpg" style="width:100%">
+        </header>
+    </body>
 
 </html>
