--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a class="navbar-brand" href="#">WebSiteName</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">HOME</a></li>
+                    <li class="active"><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">CONTACT US</a></li>
+                    <li><a href="#">PROGECTS*</a></li>
                 </ul>
             </div>
         </nav>
