--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">WebSiteName</a>
+                    <a class="navbar-brand" href="#">PC-DEVELOPERS</a>
                 </div>
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">CONTACT US</a></li>
-                    <li><a href="#">PROGECTS*</a></li>
+                    <li class=""><a href="#">ABOUT</a></li>
+                    <li class=""><a href="#">CONTACT US</a></li>
+                    <li class=""><a href="#">PROGECTS*</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
             </div>
         </nav>
