--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <title>PC-Dev Site</title>
 </head>
 
-<body>
+<body style="height:1500px">
     <header>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">PC-DEVELOPERS</a>
@@ -37,6 +37,9 @@
         </nav>
 
     </header>
+    <h1 style="margin-top:50px">
+        SOME WELCOME TEXT
+    </h1>
 
 </body>
 
