--- a/index.html
+++ b/index.html
@@ -11,15 +11,30 @@
     <link rel="stylesheet" type="text/css" href="style/style.css" />
 
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/3b10b02cf1.js"></script>
     <script src="js/javas.js"></script>
 
     <title>PC-Dev Site</title>
 </head>
 
 <body style="height:1500px">
-    <header>
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
+    <header style="box-shadow: 0px 3px 8px grey;" class="">
+        <nav class="">
+            <div style="margin-right: 20px" class="">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                </ul>
+                <ul style="margin-left: 10px" class="nav navbar-nav navbar-left">
+                    <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> pedro_marthon@live.com</a></li>
+                </ul>
+            </div>
+        </nav>
+        <hr style="width:95%">
+        <nav style="background-color: white" class="navbar">
+            <div style="margin-top: 0px" class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">PC-DEVELOPERS</a>
                 </div>
