working on scroll

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 </ul>
             </div>
         </nav>
-        <hr style="width:95%">
-        <nav style="background-color: white" class="navbar">
+        <hr style="width:98%">
+        <nav style="background-color: white" class="navbar navbar-fixed">
             <div style="margin-top: 0px" class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">PC-DEVELOPERS</a>
@@ -54,7 +54,9 @@
     </header>
     <h1 style="margin-top:50px">
         SOME WELCOME TEXT
+
     </h1>
+    <p id="scroller">1</p>
 
 </body>
 
