Finally Fixed navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="style/style.css" />
 
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/3b10b02cf1.js"></script>
     <script src="js/javas.js"></script>
@@ -19,45 +20,48 @@
 
 <body style="height:1500px">
     <header style="box-shadow: 0px 3px 8px grey;" class="">
-        <nav class="">
-            <div style="margin-right: 20px" class="">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                </ul>
-                <ul style="margin-left: 10px" class="nav navbar-nav navbar-left">
-                    <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> pedro_marthon@live.com</a></li>
-                </ul>
-            </div>
-        </nav>
-        <hr style="width:98%">
-        <nav style="background-color: white" class="navbar navbar-fixed">
-            <div style="margin-top: 0px" class="container-fluid">
+        <div style="margin-right: 20px" class="">
+            <ul class="topnav">
+                <li><a href="# "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
+                <li><a href="# "><i class="fa fa-twitter " aria-hidden="true "></i></a></li>
+                <li><a href="# "><i class="fa fa-instagram " aria-hidden="true "></i></a></li>
+                <li><a href="# "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li>
+                <li style="margin-left: 13px; float: left"><a href="# "><i class="fa fa-envelope " aria-hidden="true "></i> pedro_marthon@live.com</a></li>
+            </ul>
+        </div>
+        <hr style="width:97%; margin-top: 0; margin-bottom: 0">
+        <nav style="background-color: white; border-radius: 0px; border-color: white; " class="navbar navbar-default navbar-fixed ">
+            <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">PC-DEVELOPERS</a>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span> 
+                     </button>
+                    <a class="navbar-brand" href="#">WebSiteName</a>
                 </div>
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">HOME</a></li>
-                    <li class=""><a href="#">ABOUT</a></li>
-                    <li class=""><a href="#">CONTACT US</a></li>
-                    <li class=""><a href="#">PROGECTS*</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                </ul>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Page 1</a></li>
+                        <li><a href="#">Page 2</a></li>
+                        <li><a href="#">Page 3</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
 
     </header>
-    <h1 style="margin-top:50px">
+    <h1 style="margin-top:50px ">
         SOME WELCOME TEXT
 
     </h1>
-    <p id="scroller">1</p>
+    <p id="scroller ">1</p>
 
 </body>
 
-</html>
+</html>|
