--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/3b10b02cf1.js"></script>
-    <script src="js/javas.js"></script>
+
+
+
 
     <title>PC-Dev Site</title>
 </head>
 
-<body style="height:1500px">
-    <header style="box-shadow: 0px 3px 8px grey;" class="">
+
+<body style="height:1500px" onscroll="myFunction()">
+    <header id="header" style="box-shadow: 0px 3px 8px grey; ">
         <div style="margin-right: 20px" class="">
             <ul class="topnav">
                 <li><a href="# "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
@@ -30,8 +33,8 @@
                 <li style="margin-left: 13px; float: left"><a href="# "><i class="fa fa-envelope " aria-hidden="true "></i> pedro_marthon@live.com</a></li>
             </ul>
         </div>
-        <hr style="width:97%; margin-top: 0; margin-bottom: 0">
-        <nav style="background-color: white; border-radius: 0px; border-color: white; " class="navbar navbar-default navbar-fixed ">
+        <hr style="width:97%; margin-top: 0; margin-bottom: 0;">
+        <div id="navbar" class="navbar navbar-default navbar-fixed">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -49,20 +52,54 @@
                         <li><a href="#">Projects*</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                        <li class="dropdown "><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
+                            <ul class="dropdown-menu ">
+                                <li>
+                                    <div style="margin-left: 10px; margin-right: 10px; overflow:hidden;  min-width: 250px;" class="">
+                                        <form class="form" role="form" method="post" action="login.php" accept-charset="UTF-8">
+                                            <div class="form-group">
+                                                <label>Email</label>
+                                                <input type="text" class="form-control" name="username" id="username" placeholder="Email" required>
+                                                <br>
+                                                <label>Password</label>
+                                                <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                                                <br>
+                                                <label> Repeat Password</label>
+                                                <input type="password" class="form-control" name="password" id="password" placeholder="Repeat Password" required>
+                                                <br>
+                                                <button type="submit" class="btn btn-primary btn-block" name="signup" id="signup">Sign Up</button>
+                                            </div>
+
+                                        </form>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </li>
                         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                     </ul>
                 </div>
             </div>
-        </nav>
-
+        </div>
     </header>
-    <h1 style="margin-top:50px ">
-        SOME WELCOME TEXT
 
-    </h1>
-    <p id="scroller ">1</p>
+    <div class="content">
+        <h3>Sticky Navigation Example</h3>
+        <p>The navbar will stick to the top when you reach its scroll position.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
+            efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
+            efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
+            efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
+            efficiantur his ad. Eum no molestiae voluptatibus.</p>
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
+            efficiantur his ad. Eum no molestiae voluptatibus.</p>
+    </div>
+    <script src="js/javas.js"></script>
+
 
 </body>
 
-</html>|
+</html>
