fixed navbar shadow on sticky

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 <body style="height:1500px" onscroll="myFunction()">
-    <header id="header" style="box-shadow: 0px 3px 8px grey; ">
+    <header id="header" class="myHeader">
         <div style="margin-right: 20px" class="">
             <ul class="topnav">
                 <li><a href="# "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
