Added material design css codes and fixed signup button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <body style="height:1500px" onscroll="myFunction()">
     <header id="header" class="myHeader">
+        <!-- this is our full header -->
         <div style="margin-right: 20px" class="">
             <ul class="topnav">
                 <li><a href="# "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
@@ -34,7 +35,7 @@
             </ul>
         </div>
         <hr style="width:97%; margin-top: 0; margin-bottom: 0;">
-        <div id="navbar" class="navbar navbar-default navbar-fixed">
+        <div id="navbar" class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -84,6 +85,7 @@
     </header>
 
     <div class="content">
+        <!-- this is our body content -->
         <h3>Sticky Navigation Example</h3>
         <p>The navbar will stick to the top when you reach its scroll position.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
