FOOTER AND CHOOSING US AND

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                         <li><a href="#">Projects*</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="dropdown "><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
-                            <ul class="dropdown-menu ">
+                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
+                            <ul class="dropdown-menu">
                                 <li>
-                                    <div style="margin-left: 10px; margin-right: 10px; overflow:hidden;  min-width: 250px;" class="">
+                                    <div style="margin-left: 10px; margin-right: 10px; overflow:hidden;  min-width: 250px;" >
                                         <form class="form" role="form" method="post" action="login.php" accept-charset="UTF-8">
                                             <div class="form-group">
                                                 <label>Email</label>
