--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
+    <meta charset=" utf-8 ">
+    <meta name="viewport " content="width=device-width, initial-scale=1 ">
+    <meta http-equiv="Cache-Control " content="no-cache, no-store, must-revalidate " />
+    <meta http-equiv="Pragma " content="no-cache " />
+    <meta http-equiv="Expires " content="0 " />
 
 
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link rel="stylesheet " type="text/css " href="css/bootstrap.min.css " />
+    <link rel="stylesheet " type="text/css " href="style/style.css " />
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="https://use.fontawesome.com/3b10b02cf1.js"></script>
+    <script src="js/jquery.min.js "></script>
+    <script src="js/bootstrap.min.js "></script>
+    <script src="https://use.fontawesome.com/3b10b02cf1.js "></script>
+
 
 
 
@@ -21,52 +22,53 @@
 </head>
 
 
-<body style="height:1500px" onscroll="myFunction()">
-    <header id="header" style="box-shadow: 0px 3px 8px grey; ">
-        <div style="margin-right: 20px" class="">
-            <ul class="topnav">
+<body style="height:1500px;" onscroll="myFunction() ">
+    <header id="header" class="myHeader ">
+        <!-- this is our full header -->
+        <div style="margin-right: 20px " class=" ">
+            <ul class="topnav ">
                 <li><a href="# "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
                 <li><a href="# "><i class="fa fa-twitter " aria-hidden="true "></i></a></li>
                 <li><a href="# "><i class="fa fa-instagram " aria-hidden="true "></i></a></li>
                 <li><a href="# "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li>
-                <li style="margin-left: 13px; float: left"><a href="# "><i class="fa fa-envelope " aria-hidden="true "></i> pedro_marthon@live.com</a></li>
+                <li style="margin-left: 13px; float: left "><a href="# "><i class="fa fa-envelope " aria-hidden="true "></i> pedro_marthon@live.com</a></li>
             </ul>
         </div>
-        <hr style="width:97%; margin-top: 0; margin-bottom: 0;">
-        <div id="navbar" class="navbar navbar-default navbar-fixed">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span> 
+        <hr style="width:97%; margin-top: 0; margin-bottom: 0; ">
+        <div id="navbar" class="navbar">
+            <div class="container-fluid ">
+                <div class="navbar-header ">
+                    <button type="button " class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar "></span>
+                        <span class="icon-bar "></span>
+                        <span class="icon-bar "></span> 
                      </button>
-                    <a class="navbar-brand" href="#">WebSiteName</a>
+                    <a class="navbar-brand " href="# ">WebSiteName</a>
                 </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Projects*</a></li>
+                <div class="collapse navbar-collapse" id="myNavbar ">
+                    <ul class="nav navbar-nav ">
+                        <li class="activated "><a href="# ">Home</a></li>
+                        <li><a href="# ">About</a></li>
+                        <li><a href="# ">Contact Us</a></li>
+                        <li><a href="# ">Projects*</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
-                            <ul class="dropdown-menu">
+                    <ul class="nav navbar-nav navbar-right ">
+                        <li class="dropdown "><a href="# " class="dropdown-toggle " data-toggle="dropdown "><span class="glyphicon glyphicon-user "></span> Sign Up</a>
+                            <ul class="dropdown-menu ">
                                 <li>
-                                    <div style="margin-left: 10px; margin-right: 10px; overflow:hidden;  min-width: 250px;" >
-                                        <form class="form" role="form" method="post" action="login.php" accept-charset="UTF-8">
-                                            <div class="form-group">
+                                    <div style="margin-left: 10px; margin-right: 10px; overflow:hidden; min-width: 250px; " class=" ">
+                                        <form class="form " role="form " method="post " action="login.php " accept-charset="UTF-8 ">
+                                            <div class="form-group ">
                                                 <label>Email</label>
-                                                <input type="text" class="form-control" name="username" id="username" placeholder="Email" required>
+                                                <input type="text " class="form-control " name="username " id="username " placeholder="Email " required>
                                                 <br>
                                                 <label>Password</label>
-                                                <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                                                <input type="password " class="form-control " name="password " id="password " placeholder="Password " required>
                                                 <br>
                                                 <label> Repeat Password</label>
-                                                <input type="password" class="form-control" name="password" id="password" placeholder="Repeat Password" required>
+                                                <input type="password " class="form-control " name="password " id="password " placeholder="Repeat Password " required>
                                                 <br>
-                                                <button type="submit" class="btn btn-primary btn-block" name="signup" id="signup">Sign Up</button>
+                                                <button type="submit " class="btn btn-primary btn-block " name="signup " id="signup ">Sign Up</button>
                                             </div>
 
                                         </form>
@@ -75,14 +77,15 @@
 
                             </ul>
                         </li>
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        <li><a href="# "><span class="glyphicon glyphicon-log-in "></span> Login</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </header>
 
-    <div class="content">
+    <div class="content ">
+        <!-- this is our body content -->
         <h3>Sticky Navigation Example</h3>
         <p>The navbar will stick to the top when you reach its scroll position.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
@@ -93,10 +96,10 @@
             efficiantur his ad. Eum no molestiae voluptatibus.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
             efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        <p>Some text to enable scrolling.. Lorem ipsum dolor si    t amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
+        <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
             efficiantur his ad. Eum no molestiae voluptatibus.</p>
     </div>
-    <script src="js/javas.js"></script>
+    <script src="js/javas.js "></script>
 
 
 </body>
