slide edit and backgtound

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 
-<body onscroll="myFunction() ">
+<body onscroll="myFunction()">
     <header id="header" class="myHeader ">
         <!-- this is our full header -->
         <div style="margin-right: 20px " class=" ">
@@ -90,7 +90,7 @@
 
         <!--  slide -->
 
-        <div class="container" style="width:100%;">
+        <div class="container backss" style="width:100%;">
                 <div class="row ">
                <div class="col-md-4 information nopaddingleft nopaddingright hidden-sm hidden-xs">
                   <h3>Quick menu</h3>
