--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <body onscroll="myFunction()">
-    <header id="header" class="myHeader ">
+    <header id="header" class="myHeader " style="background-color:white">
         <!-- this is our full header -->
         <div style="margin-right: 20px " class=" ">
             <ul class="topnav ">
