--- a/index.html
+++ b/index.html
@@ -632,8 +632,8 @@
 <script type="text/javascript" src="js/please-wait.min.js"></script>
 <script>
     window.loading_screen = window.pleaseWait({
-        logo: "assets/images/logo.png",
-        backgroundColor: '#f46d3b',
+        logo: "images/hs.png",
+        backgroundColor: '#000000',
         loadingHtml: "<p class='loading-message'>A good day to you fine user!</p>"
         window.onload = finish();
     });
