--- a/test.html
+++ b/test.html
@@ -5,20 +5,36 @@
     <title>Test</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet " type="text/css " href="css/please-wait.css" />
-    <script type="text/javascript">
-    </script>
 </head>
 
 <body>
-    <script type="text/javascript" src="js/please-wait.min.js"></script>
-    <script type="text/javascript">
-        window.loading_screen = window.pleaseWait({
-            logo: "images/hs.png",
-            backgroundColor: '#f46d3b',
-            loadingHtml: "<p class='loading-message'>A good day to you fine user!</p>"
-        });
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+    <div class="page">
+        <div id="page-loader" class="loaded">
+            <div class="page-loader-logo">
+                <div class="brand">
+                    <div class="brand__name">
+                        <img src="./Dr Antoun Yaacoub_files/logo-215x32.png" alt="" width="215" height="32">
+                    </div>
+                    <div class="brand__slogan">
+                        <span>Associate Professor &amp; Researcher at the Lebanese University
+                            <br>Game Design &amp; Development Master Supervisor at the Lebanese University</span>
+                    </div>
+                </div>
+            </div>
+            <div class="page-loader-body">
+                <div id="loadingProgressG">
+                    <div class="loadingProgressG" id="loadingProgressG_1"></div>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript" src="js/please-wait.min.js"></script>
+        <script type="text/javascript">
+            window.loading_screen = window.pleaseWait({
+                logo: "images/hs.png",
+                backgroundColor: '#FFFFFF',
+                loadingHtml: "<p class='loading-message'>A good day to you fine user!</p>"
+            });
+        </script>
 
 </body>
 
