--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Expires" content="0 " />
 
     <link rel="stylesheet " type="text/css " href="css/slideshow.css" />
+    <link rel="stylesheet " type="text/css " href="css/cat.css" />
     <link rel="stylesheet " type="text/css " href="css/w3.css" />
     <link rel="stylesheet " type="text/css " href="css/bootstrap.min.css" />
     <link rel="stylesheet " type="text/css " href="style/style.css" />
@@ -135,126 +136,7 @@
             efficiantur his ad. Eum no molestiae voluptatibus.</p>
 
             <!-- category -->
-<div class="services">
-    <div class="container">
-        <div class="wthree_services_grids">	
-            <ul class="simplefilter">
-                <li class="active" data-filter="all">All</li>
-                <li data-filter="1">Castles</li>
-                <li data-filter="2">Musems</li>
-                <li data-filter="3">relegious Places</li>
-                <li data-filter="4">Caverns</li>
-                <li data-filter="5">Natural features</li>
-                <li data-filter="6">Others</li>
-            </ul>
-            <div class="filtr-container">
-                <div class="col-md-4 col-sm-4 filtr-item" data-category="1" data-sort="">
-                    <div class="agileits_portfolio_grid">
-                        <form method="post" action="secondarypage.php">
-                        <button name="id" value="<?php echo $id; ?>"/>
-                        </form>
-                            <img class="img-responsive" src=""." . $ext; ?>" alt=""  /> 
-                            <div class="w3_textbox">
-                                <h4>Tourists site of</h4>
-                                <p></p>
-                            </div>
-                     
-                    </div>
-                <?php
-                            }}
-                ?>
-                </div>
-                <div class="col-md-4 col-sm-4 filtr-item" data-category="2" data-sort="">
-                    <div class="agileits_portfolio_grid">
-                        <!--<a class="group1" href="uploads/<?php echo  $img2 . "." . $ext2; ?>" title="Tourists site of">-->
-                        <form method="post" action="secondarypage.php">
-                        <button name="id" value="<?php echo $id2; ?>"/>
-                        </form>
-                            <img class="img-responsive" src="uploads/<?php echo $img2 . "." . $ext2; ?>" alt=""  /> 
-                            <div class="w3_textbox">
-                                <h4>Tourists site of</h4>
-                                <p><?php echo $name2; ?></p>
-                            </div>
-                        </a> 
-                    </div>
-                <?php
-                            }}
-                ?>
-                </div>
-                                    <div class="col-md-4 col-sm-4 filtr-item" data-category="3" data-sort="">
-                    <div class="agileits_portfolio_grid">
-                    <form method="post" action="secondarypage.php">
-                        <button name="id" value="<?php echo $id3; ?>"/>
-                        </form>
-                        <!--<a class="group1" href="uploads/<?php echo  $img3 . "." . $ext3; ?>" title="Tourists site of">-->
-                            <img class="img-responsive" src="uploads/<?php echo $img3 . "." . $ext3; ?>" alt=""  /> 
-                            <div class="w3_textbox">
-                                <h4>Tourists site of</h4>
-                                <p><?php echo $name3; ?></p>
-                            </div>
-                        </a> 
-                    </div>
-                <?php
-                            }}
-                ?>
-                </div>
-                  <div class="col-md-4 col-sm-4 filtr-item" data-category="4" data-sort="">
-                    <div class="agileits_portfolio_grid">
-                    <form method="post" action="secondarypage.php">
-                        <button name="id" value="<?php echo $id4; ?>"/>
-                        </form>
-                        <!--<a class="group1" href="uploads/<?php echo  $img4 . "." . $ext4; ?>" title="Tourists site of">-->
-                            <img class="img-responsive" src="uploads/<?php echo $img4 . "." . $ext4; ?>" alt=""  /> 
-                            <div class="w3_textbox">
-                                <h4>Tourists site of</h4>
-                                <p><?php echo $name4; ?></p>
-                            </div>
-                        </a> 
-                    </div>
-                <?php
-                            }}
-                ?>
-                </div>
-                  <div class="col-md-4 col-sm-4 filtr-item" data-category="5" data-sort="">
-                    <div class="agileits_portfolio_grid">
-                    <form method="post" action="secondarypage.php">
-                        <button name="id" value="<?php echo $id5; ?>"/>
-                        </form>
-                        <!--<a class="group1" href="uploads/<?php echo  $img5 . "." . $ext5; ?>" title="Tourists site of">-->
-                            <img class="img-responsive" src="uploads/<?php echo $img5 . "." . $ext5; ?>" alt=""  /> 
-                            <div class="w3_textbox">
-                                <h4>Tourists site of</h4>
-                                <p><?php echo $name5; ?></p>
-                            </div>
-                        </a> 
-                    </div>
-                <?php
-                            }}
-                ?>
-                </div>	
-                  <div class="col-md-4 col-sm-4 filtr-item" data-category="6" data-sort="">
-                    <div class="agileits_portfolio_grid">
-                    <form method="post" action="secondarypage.php">
-                        <button name="id" value="<?php echo $id6; ?>"/>
-                        </form>
-                        <!--<a class="group1" href="uploads/<?php echo  $img6 . "." . $ext6; ?>" title="Tourists site of">-->
-                            <img class="img-responsive" src="uploads/<?php echo $img6 . "." . $ext6; ?>" alt=""  />
-                            <div class="w3_textbox">
-                                <h4>Tourists site of</h4>
-                                <p>name</p>
-                            </div>
-                        </a> 
-                    </div>
-                <?php
-                            }}
-                ?>
-                </div>	
-               <div class="clearfix"></div>
-            </div>
-        </div>
-        <br>
-    </div>
-</div>
+
 
 <!-- category -->
 
