ADDED A NEW CATEGORY PANEL

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet " type="text/css " href="css/w3.css" />
     <link rel="stylesheet " type="text/css " href="css/bootstrap.min.css" />
     <link rel="stylesheet " type="text/css " href="style/style.css" />
+    <link rel="stylesheet " type="text/css " href="css/cat.css" />
    <!-- <link href='https://fonts.googleapis.com/css?family=Amaranth' rel='stylesheet'> -->
 
    <script type="text/javascript">
@@ -136,8 +137,63 @@
 
             <!-- category -->
 
+            <section class="container1">
+                <div class="section first">
+                    <div class="cont_title">
+                        <!--<div class="letter-container">
+                    <p class="lettering">Alaska, USA</p>
+                  </div>-->
+                        <h1>kenai
+                            <br>fjords</h1>
+                        <h3>National Park</h3>
+                    </div>
+                    <div class="cont_desc">
+                        <p>Rappel into a crevasse, kayak through icebergs, and watch a glacier recede.</p>
+                    </div>
+                </div>
+                <div class="section">
+                    <div class="cont_title">
+                        <h1>Hawai'i
+                            <br>Volcanoes</h1>
+                        <h3>National Park</h3>
+                    </div>
+                    <div class="cont_desc">
+                        <p>Rappel into a crevasse, kayak through icebergs, and watch a glacier recede.</p>
+                    </div>
+                </div>
+                <div class="section">
+                    <div class="cont_title">
+                        <h1>Carlsbad
+                            <br>Caverns</h1>
+                        <h3>National Park</h3>
+                    </div>
+                    <div class="cont_desc">
+                        <p>Rappel into a crevasse, kayak through icebergs, and watch a glacier recede.</p>
+                    </div>
+                </div>
+                <div class="section">
+                    <div class="cont_title">
+                        <h1>Bryce
+                            <br>Canyon</h1>
+                        <h3>National Park</h3>
+                    </div>
+                    <div class="cont_desc">
+                        <p>Rappel into a crevasse, kayak through icebergs, and watch a glacier recede.</p>
+                    </div>
+                </div>
+                <div class="section">
+                    <div class="cont_title">
+                        <h1>Dry
+                            <br>Tortugas</h1>
+                        <h3>National Park</h3>
+                    </div>
+                    <div class="cont_desc">
+                        <p>Rappel into a crevasse, kayak through icebergs, and watch a glacier recede.</p>
+                    </div>
+                </div>
+            </section>
 
-<!-- category -->
+            <!-- category -->
 
         <p>The navbar will stick to the top when you reach its scroll position.</p>
         <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint
@@ -271,7 +327,7 @@
     </footer>
 
 
-    
+    <script src="js/cat.js "></script>
     <script src="js/jquery.min.js "></script>
     <script src="js/bootstrap.min.js "></script>
     <script src="js/slideshow.js "></script>
