--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="# "><i class="fa fa-twitter " aria-hidden="true "></i></a></li>
                 <li><a href="# "><i class="fa fa-instagram " aria-hidden="true "></i></a></li>
                 <li><a href="# "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li>
-                <li style="margin-left: 13px; float: left "><a href="# "><i class="fa fa-envelope " aria-hidden="true "></i> pedro_marthon@live.com</a></li>
+                <li style="margin-left: 13px; float: left "><a href="# "><i class="fa fa-envelope " aria-hidden="true "></i> sales@mawlatelecom.net</a></li>
             </ul>
         </div>
         <hr style="width:97%; margin-top: 0; margin-bottom: 0;">
