--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //font-awesome-icons -->
 
     <!-- google fonts -->
-    <link href="//fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
+    
+    <link href="css/google.css" rel="stylesheet" type="text/css" media="all" />
     <!-- //google fonts -->
 
 </head>
@@ -128,10 +128,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="bannergrids">
                     <ul class="banneraddress">
-                        <li><span class="fa fa-envelope" aria-hidden="true"></span><a href="mailto:example@email.com">info@example.com</a></li>
-                        <li><span class="fa fa-phone" aria-hidden="true"></span>+017 544 673 2277</li>
+                        <li><span class="fa fa-envelope" aria-hidden="true"></span><a href="mailto:webs@webtech.com">webs@webtech.com</a></li>
+                        <li><span class="fa fa-phone" aria-hidden="true"></span><a href="tel:009611455155">+961 01 455 155</a></li>
                         <li><a href="#contact" class="scroll"><span class="fa fa-long-arrow-right" aria-hidden="true"></span> Contact Us</a></li>
-                        <li><span class="fa fa-map-marker" aria-hidden="true"></span>123 london street maquis servilon, london</li>
+                        <!--  <li><span class="fa fa-map-marker" aria-hidden="true"></span>123 london street maquis servilon, london</li>  -->
                     </ul>
                     <div class="clearfix"></div>
                     <div class="bannerbottom">
@@ -205,32 +205,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="aboutbottom">
             <div class="container">
-                <div class="bottomgrids">
-                    <div class="col-md-3 bottomgrid1">
-                        <h3>2010</h3>
-                        <span class="fa fa-circle" aria-hidden="true"></span>
-                        <h4>Consulting Ideas</h4>
-                        <p>Donec et venenatis libero. Fusceing dapibus pulvinar tincidunt. Proin maximus ipsum ut scelerisque.</p>
-                    </div>
-                    <div class="col-md-3 bottomgrid1">
-                        <h3>2012</h3>
-                        <span class="fa fa-circle" aria-hidden="true"></span>
-                        <h4>Partnership Values</h4>
-                        <p>Donec et venenatis libero. Fusceing dapibus pulvinar tincidunt. Proin maximus ipsum ut scelerisque.</p>
-                    </div>
-                    <div class="col-md-3 bottomgrid1">
-                        <h3>2014</h3>
+                <div class="bottomgrids"  style=" margin:auto;">  
+                      <div class="col-md-3 bottomgrid1">
+                        <h3>2017</h3>
                         <span class="fa fa-circle" aria-hidden="true"></span>
                         <h4>Management</h4>
                         <p>Donec et venenatis libero. Fusceing dapibus pulvinar tincidunt. Proin maximus ipsum ut scelerisque.</p>
                     </div>
                     <div class="col-md-3 bottomgrid1">
-                        <h3>2017</h3>
+                        <h3>2018</h3>
                         <span class="fa fa-circle" aria-hidden="true"></span>
                         <h4>Theme core</h4>
                         <p>Donec et venenatis libero. Fusceing dapibus pulvinar tincidunt. Proin maximus ipsum ut scelerisque.</p>
                     </div>
-                    <div class="clearfix"> </div>
+                        <div class="clearfix"> </div>
                 </div>
             </div>
         </div>
@@ -401,9 +389,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
     <!-- map -->
     <div class="map">
-        <h3 class="w3l_header w3_agileits_header two"> <span>Contact</span> Us</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2482.432383990807!2d0.028213999961443994!3d51.52362882484525!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1423469959819" style="border:0"></iframe>
-        <div class="contactgrids">
+        <h3 class="w3l_header w3_agileits_header two" style="margin-bottom:10px"> <span>Contact</span> Us</h3>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2482.432383990807!2d0.028213999961443994!3d51.52362882484525!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1423469959819" style="border:0"></iframe> -->
+        <div class="contactgrids" style="margin:auto">
             <div class="col-md-6">
                 <div class="gridleft">
                     <h3>Working hours</h3>
