--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class="aboutbottom">
             <div class="container">
-                <div class="bottomgrids"  style=" margin:auto;">  
+                <div class="bottomgrids" >  
                       <div class="col-md-3 bottomgrid1">
                         <h3>2017</h3>
                         <span class="fa fa-circle" aria-hidden="true"></span>
@@ -291,20 +291,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <a href="#" class="social-button dribbble"><i class="fa fa-dribbble"></i></a>
                         </div>
                     </div>
-                    <div class="col-md-4 agileits_team_grid">
-                        <div class="agileits_team_grid_figure">
-                            <img src="images/team2.jpg" alt=" " class="img-responsive" />
-                        </div>
-                        <h4>James Doe</h4>
-                        <p>Finance Executive</p>
-                        <p>+21 345 287 4556</p>
-                        <div class="social-icon">
-                            <a href="#" class="social-button facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="social-button twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="social-button google"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="social-button dribbble"><i class="fa fa-dribbble"></i></a>
-                        </div>
-                    </div>
+                   
                     <div class="col-md-4 agileits_team_grid">
                         <div class="agileits_team_grid_figure">
                             <img src="images/team3.jpg" alt=" " class="img-responsive" />
@@ -326,7 +313,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <!-- //team -->
 
-    <!-- testimonials -->
+    <!-- testimonials 
     <div class="agile_testimonials" id="testimonials">
         <div class="container">
             <div class="clients-inn">
@@ -385,7 +372,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <h5>C</h5>
         </div>
     </div>
-    <!-- //testimonials -->
+    //testimonials -->
 
     <!-- map -->
     <div class="map">
