--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                                     <li><a href="#contact" class="scroll">Contact</a></li>
                                 </ul>
                                 <ul class="footericons">
+                                    <li><a href="#"><span class="fa fa-facebook" aria-hidden="true"></span></a></li>
                                     <li><a href="#"><span class="fa fa-twitter" aria-hidden="true"></span></a></li>
                                     <li><a href="#"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
                                     <li><a href="#"><span class="fa fa-google-plus" aria-hidden="true"></span></a></li>
@@ -250,21 +251,7 @@
                 </div>
                 <div class="clearfix"></div>
             </div>
-            <div class="servicebottomgrids">
-                <div class="col-md-4 serv1">
-                    <h5>Management Events <span class="fa fa-cubes" aria-hidden="true"></span></h5>
-                    <p>porttitor non vulputate ut, aliquam et justo id. Nullam aliquet a massa id euismod. Duis at euismod elit, vitae hendrerit quam nisl Sed bibendum, purus ac posuere tristique.</p>
-                </div>
-                <div class="col-md-4 serv2">
-                    <h5>Existing Clients <span class="fa fa-clone" aria-hidden="true"></span></h5>
-                    <p>porttitor non vulputate ut, aliquam et justo id. Nullam aliquet a massa id euismod. Duis at euismod elit, vitae hendrerit quam nisl Sed bibendum, purus ac posuere tristique.</p>
-                </div>
-                <div class="col-md-4 serv3">
-                    <h5>24/7 Support <span class="fa fa-user" aria-hidden="true"></span></h5>
-                    <p>porttitor non vulputate ut, aliquam et justo id. Nullam aliquet a massa id euismod. Duis at euismod elit, vitae hendrerit quam nisl Sed bibendum, purus ac posuere tristique.</p>
-                </div>
-                <div class="clearfix"></div>
-            </div>
+           
         </div>
     </div>
     <!-- Services -->
@@ -275,33 +262,33 @@
             <div class="container">
                 <h3 class="w3l_header w3_agileits_header two"> <span>Our</span> Core Team</h3>
                 <div class="agileits_team_grids">
-                    <div class="col-md-4 agileits_team_grid">
+                    <div class="col-md-4 agileits_team_grid"> 
                         <div class="agileits_team_grid_figure">
-                            <img src="images/team1.jpg" alt=" " class="img-responsive" />
+                            <img src="images/photo2.jpg" alt=" " class="img-responsive" />
                         </div>
-                        <h4>Jane Nguyen</h4>
-                        <p>General Manager</p>
-                        <p>+21 345 287 4556</p>
+                        <h4>Hassan Atwi</h4>
+                        <p>Manager</p>
+                        <p>+961 71433899</p>
                         <div class="social-icon">
                             <a href="#" class="social-button facebook"><i class="fa fa-facebook"></i></a>
                             <a href="#" class="social-button twitter"><i class="fa fa-twitter"></i></a>
                             <a href="#" class="social-button google"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="social-button dribbble"><i class="fa fa-dribbble"></i></a>
+                            <a href="#" class="social-button youtube"><i class="fa fa-youtube"></i></a>
                         </div>
                     </div>
 
                     <div class="col-md-4 agileits_team_grid">
                         <div class="agileits_team_grid_figure">
-                            <img src="images/team3.jpg" alt=" " class="img-responsive" />
+                            <img src="images/photo1.jpg" alt=" " class="img-responsive" />
                         </div>
-                        <h4>Laura Carl</h4>
-                        <p>Management</p>
-                        <p>+21 345 287 4556</p>
+                        <h4>Houssein Mawla</h4>
+                        <p>Manager</p>
+                        <p>+961 713213576</p>
                         <div class="social-icon">
                             <a href="#" class="social-button facebook"><i class="fa fa-facebook"></i></a>
                             <a href="#" class="social-button twitter"><i class="fa fa-twitter"></i></a>
                             <a href="#" class="social-button google"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="social-button dribbble"><i class="fa fa-dribbble"></i></a>
+                            <a href="#" class="social-button youtube"><i class="fa fa-youtube"></i></a>
                         </div>
                     </div>
                     <div class="clearfix"> </div>
@@ -389,9 +376,9 @@
             <div class="col-md-6">
                 <div class="gridright">
                     <h3>phone Online</h3>
-                    <p>Phone : +456-123-7890</p>
-                    <p>Fax : +456-123-7890</p>
-                    <p><a href="mailto:example@email.com">info@example.com</a></p>
+                    <p>Phone : 71433899</p>
+                    <p>Phone : 71321357</p>
+                    <p><a href="mailto:pedro.marthon@live.com">pedro.marthon@live.com</a></p>
                     <span class="fa fa-phone" aria-hidden="true"></span>
                 </div>
             </div>
