--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="stylesheet" href="css/owl.carousel.css" type="text/css" media="all">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/mystyle.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" property="" />
 
     <!-- js -->
@@ -205,13 +206,13 @@
         <div class="aboutbottom">
             <div class="container">
                 <div class="bottomgrids">
-                    <div class="col-md-3 bottomgrid1">
+                    <div class="col-md-3 bottomgrid1 year1">
                         <h3>2017</h3>
                         <span class="fa fa-circle" aria-hidden="true"></span>
                         <h4>Management</h4>
                         <p>Donec et venenatis libero. Fusceing dapibus pulvinar tincidunt. Proin maximus ipsum ut scelerisque.</p>
                     </div>
-                    <div class="col-md-3 bottomgrid1">
+                    <div class="col-md-3 bottomgrid1 year1">
                         <h3>2018</h3>
                         <span class="fa fa-circle" aria-hidden="true"></span>
                         <h4>Theme core</h4>
@@ -262,7 +263,7 @@
             <div class="container">
                 <h3 class="w3l_header w3_agileits_header two"> <span>Our</span> Core Team</h3>
                 <div class="agileits_team_grids">
-                    <div class="col-md-4 agileits_team_grid"> 
+                    <div class="col-md-4 agileits_team_grid team1"> 
                         <div class="agileits_team_grid_figure">
                             <img src="images/photo2.jpg" alt=" " class="img-responsive" />
                         </div>
@@ -277,7 +278,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4 agileits_team_grid">
+                    <div class="col-md-4 agileits_team_grid team1">
                         <div class="agileits_team_grid_figure">
                             <img src="images/photo1.jpg" alt=" " class="img-responsive" />
                         </div>
